[package]
name = "miband-heart-rate"
authors = ["Tnze"]
version = "0.1.0"
edition = "2021"
repository = "https://github.com/Tnze/miband-heart-rate"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
bluest = "0.6.4"
futures-lite = "2.1.0"
warp = "0.3.6"
